# ascii-webcam

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
images/: README.md
include/: README.md  ascii_image.hpp  raw_image.hpp
output/: README.md  output_gray.txt
src/: README.md  ascii_image.cpp  ascii_image.hpp  main.cpp  raw_image.cpp  raw_image.hpp
tests/: README.md  ascii_art_tests.cpp  ascii_image_tests.cpp  raw_image_tests.cpp
